--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "oscar-md-v6",
+    "name": "ibeng-md-v6",
     "version": "3.0.0",
-    "description": "WhatsApp BOT By Jarot",
+    "description": "WhatsApp BOT By ibeng",
     "main": "index.js",
     "type": "module",
     "directories": {
@@ -69,7 +69,6 @@
         "mime-types": "^2.1.34",
         "moment-timezone": "^0.5.34",
         "mongoose": "^6.4.3",
-        "nekos.life": "^2.0.7",
         "node-fetch": "^3.2.0",
         "node-gtts": "^2.0.2",
         "node-os-utils": "^1.3.6",
